[build-system]
requires = ["setuptools"]

[project]
name = "blogger-post"
version = "0.1.0"
description = "CLI tool to publish posts to Blogger via API"
requires-python = ">=3.8"
dependencies = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "markdown",
]

[project.scripts]
blogger-post = "main:main"
